// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useGetUserAlertPermissions returns default permissions when permissions for featureId are missing 1`] = `
Object {
  "crud": false,
  "featureId": null,
  "loading": false,
  "read": false,
}
`;

exports[`useGetUserAlertPermissions updates permissions when featureId changes 1`] = `
Object {
  "crud": true,
  "featureId": "uptime",
  "loading": false,
  "read": true,
}
`;

exports[`useGetUserAlertPermissions updates permissions when featureId changes 2`] = `
Object {
  "crud": false,
  "featureId": "apm",
  "loading": false,
  "read": true,
}
`;
